--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return lambda neighbor: first_neighbor['street'],neighbors"
+    "    return lambda neighbor: first_neighbor['street']"
    ]
   },
   {
