--- a/index.ipynb
+++ b/index.ipynb
@@ -202,21 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-982468c76231>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-7-816e2bd6548e>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-982468c76231>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return abs(lambda neighbor: first_neighbor['street'] - lambda neighbor: second_neighbor['street'])\u001b[0m\n\u001b[0m                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-816e2bd6548e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return abs(lambda neighbor: first_neighbor['street'] - neighbor: second_neighbor['street'])\u001b[0m\n\u001b[0m                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return abs(lambda neighbor: first_neighbor['street'] - lambda neighbor: second_neighbor['street'])"
+    "    return abs(lambda neighbor: first_neighbor['street'] - neighbor: second_neighbor['street'])"
    ]
   },
   {
