automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return neighborfirst_neighbor['street'] - neighbor: second_neighbor['street']"
+    "    return neighbor(first_neighbor['street']) - neighbor(second_neighbor['street'])"
    ]
   },
   {
