automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return neighbor(first_neighbor['street']) - neighbor(second_neighbor['street'])"
+    "    return neighbors(first_neighbor['street']) - neighbors(second_neighbor['street'])"
    ]
   },
   {
