--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    for \n",
+    "    for first_neighbor, second_neighbor in neighbors\n",
     "    return neighbors(first_neighbor['street']) - neighbors(second_neighbor['street'])"
    ]
   },
