automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,13 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-3e1f63c25a1d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-3e1f63c25a1d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for first_neighbor, second_neighbor in neighbors\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    for first_neighbor, second_neighbor in neighbors\n",
-    "    return neighbors(first_neighbor['street']) - neighbors(second_neighbor['street'])"
+    "        return neighbors(first_neighbor['street']) - neighbors(second_neighbor['street'])"
    ]
   },
   {
