automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return first_neighbor['street']) - neighbors(second_neighbor['street'])"
+    "    return first_neighbor['street'] - second_neighbor['street']"
    ]
   },
   {
