--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    math.sqrt(2)"
+    "    return math.sqrt(2)"
    ]
   },
   {
