automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return pow(street_distance(first_neighbor, second_neighbor), 2) + pow(avenue_distance(first_neighbor, second_neighbor), 2"
+    "    return pow(street_distance(first_neighbor, second_neighbor), 2) + pow(avenue_distance(first_neighbor, second_neighbor), 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "17"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
