--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    neighbor_distn"
+    "    neighbor_distance = []\n",
+    "    for "
    ]
   },
   {
