--- a/index.ipynb
+++ b/index.ipynb
@@ -435,8 +435,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    neighbor_distance = []\n",
-    "    f"
+    "    neighbor_distance = second_neighbor.cop\n",
+    "    "
    ]
   },
   {
