automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,22 +436,22 @@
     "    neighbor_distance = second_neighbor.copy()\n",
     "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
     "    neighbor_distance['distance'] = distance\n",
-    "    return distance_with_neighbor\n",
+    "    return neighbor_distance\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.distance_with_neighbor(first_neighbor, second_neighbor)>"
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
