--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    for"
+    "    return distance_with_neighbor()"
    ]
   },
   {
