--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    other neighbors = list(filter(lambda neigh))"
+    "    other neighbors = list(filter(lambda neighbors != fi))"
    ]
   },
   {
