--- a/index.ipynb
+++ b/index.ipynb
@@ -470,12 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-6439cbad7683>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-6439cbad7683>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    other neighbors = list(filter(lambda neighbors != first_neighbor, neighbors))\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    other neighbors = list(filter(lambda neighbors != fi))"
+    "    other neighbors = list(filter(lambda neighbors != first_neighbor, neighbors))"
    ]
   },
   {
