automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    other_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))"
+    "    other_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
+    "    "
    ]
   },
   {
