--- a/index.ipynb
+++ b/index.ipynb
@@ -476,6 +476,10 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    other_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
+    "    return list(map)\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor), remaining_neighbors))"
    ]
   },
