--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    other_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
-    "    return list(map(lambda neighbor: distance_with_neighbot(first_neighbor, neighbors), r))\n",
+    "    return list(map(lambda neighbor: distance_with_neighbot(first_neighbor, neighbors), other_neighbots))\n",
     "    \n",
     "    \n",
     "    \n",
