automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,18 +470,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    other_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
-    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbors), other_neighbors))"
+    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor), other_neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
