--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    pass"
+    "    number = number or len(neighbors) - 1\n",
+    "    "
    ]
   },
   {
