automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,22 +526,21 @@
     "    number = number or len(neighbors) - 1\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
-    "    return sorted_neighbors[:number]"
+    "    return sorted_neighbors[number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}]"
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
